Added missing banner

--- a/views/hostel_description.ejs
+++ b/views/hostel_description.ejs
@@ -345,7 +345,7 @@
 
 
     <!-- This site is optimized with the Yoast WordPress SEO plugin v1.0.3 - http://yoast.com/wordpress/seo/ -->
-    <link rel="canonical" href="index.html"/>
+    <link rel="canonical" href="/"/>
     <!-- / Yoast WordPress SEO plugin. -->
 
     <script type="text/javascript">
